[package]
name = "satysfifmt"
version = "0.1.0"
authors = ["puripuri2100 <puripuri2100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satysfi-parser = {git = "https://github.com/monaqa/satysfi-parser.git"}
anyhow = "1.0.40"
thiserror = "1.0.24"

